--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ nav .fa {
         display: block;
     }
     .nav-links {
-        position: absolute;
+        position: fixed;
         background: #138ada;
         height: 100vh;
         width: 200px;
@@ -143,6 +143,20 @@ nav .fa {
 }
 
 /* Course styling */
+
+.course-header {
+    height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(images/courseHeader.jpg);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: white;
+}
+
+.course-header h1 {
+    margin-top: -40px;
+}
 
 .course {
     width: 100%;
@@ -483,4 +497,174 @@ nav .fa {
 
 .about-btn:hover {
     color: whitesmoke;
+}
+
+/* Blog Content */
+
+.blog-header {
+    height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(images/blogHeader.jpg);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: white;
+}
+
+.blog-header h1 {
+    margin-top: -40px;
+}
+
+.blog-content {
+    width: 100%;
+    margin: auto;
+    /* padding: 0 50px; */
+}
+
+.blog-left {
+    flex-basis: 65%;
+    padding-left: 100px;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+
+.blog-left img {
+    width: 70%;
+    height: 40%;
+    border-top-right-radius: 200px;
+    border-bottom-left-radius: 200px;
+}
+
+.blog-left h2 {
+    color: #222;
+    font-weight: 600;
+    margin: 30px 0;
+}
+
+.blog-left p {
+    color: #999;
+    padding: 0;
+}
+
+.blog-right {
+    flex-basis: 45%;
+    padding-right: 150px;
+    padding-top: 60px;
+}
+
+.blog-right h3 {
+    background: #138ada;
+    color: white;
+    padding: 7px 2px;
+    font-size: 30px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.blog-right div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #555;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
+.comment-box {
+    border: 1px solid #ccc;
+    margin: 50px 0;
+    padding: 10px 20px;
+}
+
+.comment-box h3 {
+    text-align: left;
+}
+
+.comment-form input, .comment-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 15px 0;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    background: #f0f0f0;
+}
+
+.comment-form button {
+    margin: 10px 0;
+}
+
+@media(max-width: 700px) {
+    .sub-header h1 {
+        font-size: 24px;
+    }
+}
+
+/* Contact Us Page styling */
+
+.contact-header {
+    height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(images/contactGif.gif);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: white;
+}
+
+.contact-header h1 {
+    margin-top: -40px;
+}
+
+.location {
+    width: 90%;
+    margin: auto;
+    padding: 80px 0;
+}
+
+.location iframe {
+    width: 100%;
+}
+
+.contact-us {
+    width: 90%;
+    margin: auto;
+}
+
+.contact-col {
+    flex-basis: 48%;
+    margin-bottom: 30px;
+}
+
+.contact-col div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.contact-col div .fa {
+    font-size: 28px;
+    color: #138ada;
+    margin: 10px;
+    margin-right: 30px;
+}
+
+.contact-col div p {
+    padding: 0;
+}
+
+.contact-col div h5 {
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #555;
+    font-weight: 400;
+}
+
+.contact-col input, .contact-col textarea {
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
 }
